# tm

./: .eslintrc.js  .gitattributes  .gitignore  .prettierignore  .tool-versions  01_TaskMind_PRD.md  02_TaskMind_SRS.md  03_TaskMind_UIUX_Design_Spec.md  04_TaskMind_CICD_Pipeline.md  CHANGELOG.md  PLAN.md  README.md  SETUP.md  app.json  babel.config.js  drizzle.config.ts  eas.json  eslint.config.mjs  index.js  jest.config.js  metro.config.js  package-lock.json  package.json  tsconfig.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-debug.yml  build-release.yml  ci.yml  generate-keystore.yml
__tests__/data/: TaskRepository.test.ts  migrations.test.ts
__tests__/domain/entities/: Task.test.ts
__tests__/domain/extraction/: actionExtractor.test.ts  confidenceAggregator.test.ts  deadlineExtractor.test.ts  languageDetector.test.ts  pipeline.test.ts  preprocessor.test.ts  ruleEngine.test.ts  seedConfig.test.ts
__tests__/domain/usecases/: usecases.test.ts
__tests__/extraction/: languageDetector.test.ts  preprocessor.test.ts  ruleEngine.test.ts
__tests__/services/: app-name-map.test.ts  google-task-notes.test.ts  intent-model.test.ts  pipeline-decision.test.ts  quick-extract.test.ts  signal-scorer.test.ts  text-featurizer.test.ts
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/layout/: task_widget.xml
android/app/src/main/res/values/: strings.xml  styles.xml
android/expo-module-gradle-plugin/: build.gradle  settings.gradle
assets/: seed-keywords.json
assets/models/: intent-seed-model.json
docs/: debugging-without-ide.md
modules/notification-listener/: app.plugin.js  expo-module.config.json  package.json
modules/notification-listener/android/: build.gradle
modules/notification-listener/android/src/main/: AndroidManifest.xml
modules/notification-listener/android/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
modules/notification-listener/src/: LlmModule.ts  NotificationListener.types.ts  NotificationListenerModule.ts  index.ts  types.ts
scripts/: apply-dark-mode.js  generate-seed-model.js  seed-db.ts
src/app/: _layout.tsx  call-transcript.tsx  index.tsx  share.tsx  transcript.tsx
src/app/(tabs)/: _layout.tsx  confirmations.tsx  history.tsx  index.tsx  settings.tsx
src/app/call-review/: [id].tsx
src/app/oauth/: google.tsx
src/app/onboarding/: _layout.tsx  apps.tsx  done.tsx  index.tsx  nudges.tsx  permissions.tsx  priority.tsx  vip.tsx
src/app/settings/: ai-cloud.tsx  ai-model.tsx  analytics.tsx  battery-guide.tsx  call-transcription.tsx  diagnostics.tsx  email-report.tsx  export-import.tsx  focus-lock.tsx  google-tasks.tsx  in-app-transcription.tsx  learned-vocabulary.tsx  monitored-apps.tsx  nudges.tsx  transcript-import.tsx  transcription-debug.tsx  vip-contacts.tsx  vocabulary.tsx
src/app/task/: [id].tsx  create.tsx
src/data/: pipeline-store.ts
src/data/db/: client.ts  migrate.ts  schema.ts
src/data/db/migrations/: 0000_cloudy_bromley.sql  0000_initial.sql  0001_add_due_date.sql  0003_notification_key.sql  index.ts  migrations.js
src/data/db/migrations/meta/: 0000_snapshot.json  _journal.json
src/data/repositories/: CallRecordRepository.ts  ConversationRepository.ts  DiscardedLogRepository.ts  LearnedKeywordRepository.ts  MonitoredAppRepository.ts  SenderStatsRepository.ts  TaskRepository.ts  VipContactRepository.ts
src/data/storage/: settings.ts
src/domain/: types.ts
src/domain/entities/: Task.ts
src/domain/extraction/: actionExtractor.ts  confidenceAggregator.ts  deadlineExtractor.ts  index.ts  languageDetector.ts  pipeline.ts  preprocessor.ts  priorityAssigner.ts  ruleEngine.ts  seedConfig.ts  types.ts
src/domain/usecases/: AssignPriority.ts  CompleteTask.ts  CreateTask.ts  DeleteTask.ts
src/i18n/: index.ts
src/locales/: en.json  hi.json
src/services/: ai-classifier.ts  ai-digest.ts  analytics-logger.ts  app-name-map.ts  call-retry.ts  call-transcript-stash.ts  db-seeder.ts  diagnostics-logger.ts  google-tasks-sync.ts  google-tasks.ts  intent-model.ts  llm-manager.ts  llm-service.ts  model-manager.ts  notification-handler.ts  nudge-scheduler.ts  onnx-classifier.ts  pipeline.ts  quick-extract.ts  review-actions.ts  share-stash.ts  signal-scorer.ts  task-actions.ts  text-featurizer.ts  title-extractor.ts  transcript-extractor.ts
src/state/: diagnosticsStore.ts  settingsStore.ts  taskStore.ts
src/types/: declarations.d.ts
src/ui/components/: Button.tsx  ContactPickerModal.tsx  EmptyState.tsx  PriorityChip.tsx  Screen.tsx  SourceAppChip.tsx  SwipeNavigator.tsx  TaskCard.tsx
src/ui/theme/: colors.ts  index.tsx  spacing.ts  typography.ts
(+46 files in other folders)
